--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-task",
   "version": "0.1.0",
+  "homepage": "https://adimurat.github.io/my-task",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -34,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   }
 }
